XPDEV_DEPS up the rest

--- a/src/sbbs3/gtkchat/GNUmakefile
+++ b/src/sbbs3/gtkchat/GNUmakefile
@@ -26,6 +26,6 @@ CFLAGS	+=	-I.. -I../../comio $(SMBLIB_CFLAGS) $(HASH_CFLAGS) $(ENCODE_CFLAGS) $(
 LDFLAGS	+=	$(SMBLIB_LDFLAGS) $(ENCODE_LDFLAGS) $(HASH_LDFLAGS) $(XPDEV-MT_LDFLAGS) $(MT_LDFLAGS)
 EXTRA_LIBS += `pkg-config gtk+-3.0 --libs`
 
-$(GTKCHAT): $(OBJS)
+$(GTKCHAT): $(XPDEV_DEPS) $(OBJS)
 	@echo Linking $@
 	$(QUIET)$(CC) $(LDFLAGS) $(OBJS) -o $@ $(EXTRA_LIBS) $(SMBLIB_LIBS) $(ENCODE_LIBS) $(HASH_LIBS) $(XPDEV-MT_LIBS)
