--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -261,3 +261,9 @@ endif()
 if(NOT HAS_STRLCPY)
 	target_compile_definitions(xpdev PUBLIC NEEDS_STRLCPY)
 endif()
+
+if(WITHOUT_CRYPTLIB)
+	target_compile_definitions(xpdev PRIVATE WITHOUT_CRYPTLIB)
+else()
+	target_link_libraries(xpdev cl)
+endif()
