Add WITH_CRYPTLIB to CMake too

--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -265,5 +265,6 @@ endif()
 if(WITHOUT_CRYPTLIB)
 	target_compile_definitions(xpdev PRIVATE WITHOUT_CRYPTLIB)
 else()
+	target_compile_definitions(xpdev PRIVATE WITH_CRYPTLIB)
 	target_link_libraries(xpdev cl)
 endif()
