Make those WITH/WITHOUT definitions public

--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -263,8 +263,8 @@ if(NOT HAS_STRLCPY)
 endif()
 
 if(WITHOUT_CRYPTLIB)
-	target_compile_definitions(xpdev PRIVATE WITHOUT_CRYPTLIB)
+	target_compile_definitions(xpdev PUBLIC WITHOUT_CRYPTLIB)
 else()
-	target_compile_definitions(xpdev PRIVATE WITH_CRYPTLIB)
+	target_compile_definitions(xpdev PUBLIC WITH_CRYPTLIB)
 	target_link_libraries(xpdev cl)
 endif()
