Don't archive files from git in 3rdp
This was archiving 3rdp/*.release which includes binaries included
in git. Change the wildcard to *.*.*.release which should only
include stuff we've built/installed since the binaries use *.release
or *.*.release (so far).

--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -51,7 +51,7 @@ spec:
     - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS libmozjs
     - mkdir -p "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}"
     - cd ../..
-    - tar -czf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/spidermonkey.tgz" 3rdp/*.release/mozjs
+    - tar -czf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/spidermonkey.tgz" 3rdp/*.*.*.release/mozjs
   variables:
     GIT_STRATEGY: fetch
   rules:
