--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -738,6 +738,7 @@ spec:
     - .$[[ inputs.os ]]-test
   script:
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/sbbs-build${EXTRA_FILENAME}.tgz"
+    - rm -rf ctrl exec
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/ctrl_exec${EXTRA_FILENAME}.tgz"
     - "SBBSCTRL=./ctrl src/sbbs3/*.exe.release/jsexec -S -f exec/tests/test.js"
   variables:
@@ -757,6 +758,7 @@ spec:
     - .$[[ inputs.os ]]-test
   script:
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/sbbs-build${EXTRA_FILENAME}.tgz"
+    - rm -rf ctrl exec
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/ctrl_exec${EXTRA_FILENAME}.tgz"
     - "SBBSCTRL=./ctrl valgrind --leak-check=full --error-exitcode=1 --num-callers=20 --track-origins=yes --read-var-info=yes --read-inline-info=yes --suppressions=src/sbbs3/suppressions.vg src/sbbs3/*.exe.release/jsexec -S -f exec/tests/test.js"
   variables:
@@ -778,6 +780,7 @@ spec:
     - .$[[ inputs.os ]]-test
   script:
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/jsdoor.tgz"
+    - rm -rf ctrl exec
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/ctrl_exec${EXTRA_FILENAME}.tgz"
     - "SBBSCTRL=./ctrl src/sbbs3/*.exe.release/jsdoor -S -f exec/tests/test.js"
   variables:
