Ok, yeah, there's some git magic happening here... avoid it
Create a ci-test dir and extract there then delete after.

--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -737,10 +737,14 @@ spec:
   extends:
     - .$[[ inputs.os ]]-test
   script:
+    - rm -rf ci-test
+    - mkdir ci-test
+    - cd ci-test
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/sbbs-build${EXTRA_FILENAME}.tgz"
-    - rm -rf ctrl exec
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/ctrl_exec${EXTRA_FILENAME}.tgz"
     - "SBBSCTRL=./ctrl src/sbbs3/*.exe.release/jsexec -S -f exec/tests/test.js"
+    - cd ..
+    - rm -rf ci-test
   variables:
     GIT_STRATEGY: none
   needs:
@@ -757,10 +761,14 @@ spec:
   extends:
     - .$[[ inputs.os ]]-test
   script:
+    - rm -rf ci-test
+    - mkdir ci-test
+    - cd ci-test
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/sbbs-build${EXTRA_FILENAME}.tgz"
-    - rm -rf ctrl exec
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/ctrl_exec${EXTRA_FILENAME}.tgz"
     - "SBBSCTRL=./ctrl valgrind --leak-check=full --error-exitcode=1 --num-callers=20 --track-origins=yes --read-var-info=yes --read-inline-info=yes --suppressions=src/sbbs3/suppressions.vg src/sbbs3/*.exe.release/jsexec -S -f exec/tests/test.js"
+    - cd ..
+    - rm -rf ci-test
   variables:
     GIT_STRATEGY: none
   needs:
@@ -779,10 +787,14 @@ spec:
   extends:
     - .$[[ inputs.os ]]-test
   script:
+    - rm -rf ci-test
+    - mkdir ci-test
+    - cd ci-test
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/jsdoor.tgz"
-    - rm -rf ctrl exec
     - tar -xvkzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/ctrl_exec${EXTRA_FILENAME}.tgz"
     - "SBBSCTRL=./ctrl src/sbbs3/*.exe.release/jsdoor -S -f exec/tests/test.js"
+    - cd ..
+    - rm -rf ci-test
   variables:
     GIT_STRATEGY: none
   needs:
