--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,40 +24,40 @@ include:
       os: 'openbsd'
       platform: 'amd64'
       tagname: 'OpenBSD'
-      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 NO_ABSOLUTE_RPATH=1'
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: 'netbsd'
       platform: 'amd64'
       tagname: 'NetBSD'
-      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 USE_SYSTEM_CURSES=1'
+      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 USE_SYSTEM_CURSES=1 NO_ABSOLUTE_RPATH=1'
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: 'freebsd'
       platform: 'amd64'
       tagname: 'FreeBSD'
-      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 NO_ABSOLUTE_RPATH=1'
       has_valgrind: "yes"
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: 'raspian'
       platform: 'armhf-on-aarch64'
       tagname: 'RaspberryPi'
-      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 NO_ABSOLUTE_RPATH=1'
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: "linux"
       platform: "x64"
       tagname: "Linux"
       has_gtk: "yes"
-      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 NO_ABSOLUTE_RPATH=1'
       has_valgrind: "yes"
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: "alpine-linux"
       platform: "x64"
       tagname: "alpine-linux"
-      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 NO_ABSOLUTE_RPATH=1'
       no_javascript: 'yes'
   - local: '.gitlab-ci-unix.yml'
     inputs:
