--- a/src/sbbs3/GNUmakefile
+++ b/src/sbbs3/GNUmakefile
@@ -126,10 +126,12 @@ include sbbsdefs.mk
 MT_CFLAGS	+=	$(SBBSDEFS) $(SFTP-MT_CFLAGS)
 
 ifneq ($(os),darwin)
- ifdef SBBSDIR
-  LIB_RPATH += -Wl,-rpath,$(SBBSDIR)/exec
+ ifndef NO_ABSOLUTE_RPATH
+  ifdef SBBSDIR
+   LIB_RPATH += -Wl,-rpath,$(SBBSDIR)/exec
+  endif
+  LIB_RPATH += -Wl,-rpath,$(PWD)/$(LIBODIR)
  endif
- LIB_RPATH += -Wl,-rpath,$(PWD)/$(LIBODIR)
  LIB_RPATH += '-Wl,-rpath,$$ORIGIN,-rpath,$$ORIGIN/../$(LIBODIR),-z,origin,--enable-new-dtags'
 endif
 
