--- a/src/sbbs3/syncview/GNUmakefile
+++ b/src/sbbs3/syncview/GNUmakefile
@@ -19,7 +19,7 @@ include $(SRC_ROOT)/sbbs3/sbbsdefs.mk
 
 vpath %.c ..
 
-CFLAGS	+=	$(CIOLIB-MT_CFLAGS) $(XPDEV-MT_CFLAGS) $(SMBLIB_CFLAGS)
+CFLAGS	+=	$(CIOLIB-MT_CFLAGS) $(XPDEV-MT_CFLAGS) $(SMBLIB_CFLAGS) -I..
 LDFLAGS	+=	$(CIOLIB-MT_LDFLAGS) $(XPDEV-MT_LDFLAGS) $(MT_LDFLAGS) $(ENCODE_LDFLAGS) $(HASH_LDFLAGS)
 
 $(SYNCVIEW): $(OBJS)
